using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationString : MonoBehaviour
{
    internal static string jump = "jump";
    internal static string IsMoving = "IsMoving";
    internal static string IsRunning = "IsRunning";
    internal static string IsGrounded = "IsGrounded";
    internal static string YVelocity = "YVelocity";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string attack1 = "attack1";
    internal static string canMove = "canMove";
    internal static string hasTragtet = "HasTarget";
    internal static string IsAlive = "IsAlive";
}
